# homekit-thermostat

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  sdkconfig
assets/: thermostat.fzz
components/i2cdev/: CMakeLists.txt  Kconfig  component.mk
components/lv_qrcode/: CMakeLists.txt  lv_qrcode.c  lv_qrcode.h
components/sht4x/: CMakeLists.txt  sht4x.c  sht4x.h
main/: CMakeLists.txt  Kconfig.projbuild  datetime.c  datetime.h  err.c  err.h  error_handler.c  error_handler.h  events.c  events.h  gui.c  gui.h  homekit.c  homekit.h  idf_component.yml  lcd.c  main.c  relay.c  relay.h  sht40.c  sht40.h  wifi.c  wifi.h
main/gui/: fonts.c  fonts.h  gui.c  gui.h  scr_loading.c  scr_loading.h  scr_main.c  scr_main.h  scr_wifi_setup.c  scr_wifi_setup.h
main/hw/: lcd.c  lcd.h  led.c  led.h  relay.c  sht40.c  sht40.h
main/tasks/: task_lvgl.c  task_temp.c  task_time.c  tasks.h
